fixed white space issue

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,16 +4,20 @@
   --teritary: rgba(255, 255, 180, 0.778);
   --text: #715959;
 }
-.root{
+.root {
   height: 100vh;
 }
 
+.welcome-box{
+  height: 90vh;
+}
 
 .App {
   text-align: center;
   /* background-image: url("/public/images/house1.jpeg"); */
   background-size: cover;
   background-position: left;
+  /* height: 100vh; */
 }
 
 .App-logo {
